src/test/resources/org/nest/nestml/_cocos/valid/funNotDefined.nestml
neuron Dummy:
  function f():
    random()
  end
end