src/test/resources/org/nest/nestml/_cocos/invalid/funNotDefined.nestml
neuron Dummy:
  function f():

    bar() /* not defined */

    # not defined
    random(2) # not defined with parameter
  end
end